feat: add unit test coverage for application layer across multiple modules
- SystemService: added 3 tests for getApiVersion, getHealth, getMetrics
- AdminService: added 3 tests for triggerJob (success, unknown, null)
- AlertService: added 4 tests for subscribe (success, null price, product not found)
- ActivityLogService: added 5 tests for log and findAll
- LlmService: added 7 tests for extractReceipt, generateImageHash, getCurrentProvider, isAvailable
- UnitService: added 5 tests for create, findAll, update (success, not found)
- FeedbackQuestionService: added 2 tests for create and findAll

Closes: #coverage-improvement